--- a/public/index.html
+++ b/public/index.html
@@ -1,81 +1,89 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <title>Assistant Chat</title>
-    <!-- Bootstrap CSS -->
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-    />
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>OpenAI Assistant Chat</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <style>
-      body {
-        background-color: #121212;
-        color: #ffffff;
-      }
-      .message-container {
-        height: 200px;
-        overflow-y: scroll;
-        border: 1px solid #444;
-        padding: 10px;
-        margin-bottom: 15px;
-      }
-      .message.user {
-        color: #0dcaf0;
-      }
-      .message.assistant {
-        color: #ffc107;
-      }
+        body {
+            background-color: #343a40;
+            color: #f8f9fa;
+        }
+        .user-message {
+            color: #007bff;
+            text-align: right;
+        }
+        .assistant-message {
+            color: #28a745;
+            text-align: left;
+        }
+        #chatBox {
+            height: 300px;
+            overflow-y: auto;
+            border: 1px solid #495057;
+            border-radius: 5px;
+            padding: 10px;
+        }
+        #thread-list {
+            height: 300px;
+            overflow-y: auto;
+            border: 1px solid #495057;
+            border-radius: 5px;
+            padding: 10px;
+            margin-bottom: 15px;
+        }
+        .thread-item {
+            padding: 10px;
+            background-color: #495057;
+            border-radius: 3px;
+            margin-bottom: 10px;
+            cursor: pointer;
+        }
+        .thread-item:hover {
+            background-color: #6c757d;
+        }
     </style>
-  </head>
-  <body>
-    <div class="container my-5">
-      <h1 class="text-center">Assistant Chat</h1>
+</head>
+<body>
+    <div class="container mt-5">
+        <h1 class="text-center">OpenAI Assistant Chat</h1>
+        <div class="row">
+            <!-- Left Side: Threads List -->
+            <div class="col-md-3">
+                <h4>Previous Threads</h4>
+                <div id="thread-list">
+                    <!-- Previous threads will be displayed here dynamically -->
+                </div>
+            </div>
 
-      <!-- Assistant Selection -->
-      <div class="mb-3">
-        <label for="assistantSelect" class="form-label">Select Assistant</label>
-        <input
-          id="assistant_name"
-          type="text"
-          value="asst_2JWXaEmwhgVBotP0QDjH9Dbm"
-        />
-        <button
-          id="get_assistant"
-          class="btn btn-primary"
-          onclick="getAssistant()"
-        >
-          Get Assistant
-        </button>
-      </div>
+            <!-- Right Side: Chat Interface -->
+            <div class="col-md-9">
+                <div class="form-group">
+                    <label for="assistantId">Assistant ID:</label>
+                    <input type="text" class="form-control" id="assistantId" placeholder="Enter assistant ID" required>
+                </div>
 
-      <!-- Create New Thread Button -->
-      <div class="mb-3">
-        <button id="newThreadBtn" class="btn btn-primary" onclick="getThread()">
-          Create New Thread
-        </button>
-      </div>
+                <!-- Button to create a new thread -->
+                <button id="createThreadButton" class="btn btn-success mb-3">Create New Thread</button>
 
-      <!-- Message Display -->
-      <div class="message-container" id="message-container"></div>
+                <!-- Form to Get User Prompt -->
+                <form id="promptForm">
+                    <div class="form-group">
+                        <label for="promptMessage">User Prompt:</label>
+                        <input type="text" class="form-control" id="promptMessage" placeholder="Type your prompt" required>
+                    </div>
+                    <button type="submit" class="btn btn-primary">Send Prompt</button>
+                </form>
 
-      <!-- Message Input -->
-      <div class="input-group mb-3">
-        <button id="sendBtn" class="btn btn-success" onclick="getResponse()">
-          Send
-        </button>
-        <input
-          type="text"
-          id="messageInput"
-          class="form-control"
-          placeholder="Type your message..."
-        />
-      </div>
+                <!-- Chat Box to Display Messages -->
+                <div id="chatBox" class="mt-4">
+                    <!-- Chat messages will be appended here -->
+                </div>
+            </div>
+        </div>
     </div>
 
-    <!-- Bootstrap JS and dependencies -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
-    <!-- Custom Script -->
     <script src="scripts.js"></script>
-  </body>
+</body>
 </html>
