Working except ID

--- a/public/index.html
+++ b/public/index.html
@@ -63,9 +63,17 @@
                     <label for="assistantId">Assistant ID:</label>
                     <input type="text" class="form-control" id="assistantId" placeholder="Enter assistant ID" required>
                 </div>
+                
+                <div class="form-group">
+                    <label for="threadName">Thread Name:</label>
+                    <input type="text" class="form-control" id="threadName" placeholder="Enter thread name" required>
+                </div>
 
                 <!-- Button to create a new thread -->
                 <button id="createThreadButton" class="btn btn-success mb-3">Create New Thread</button>
+
+                <!-- Button to update thread name -->
+                <button id="updateThreadNameButton" class="btn btn-primary mb-3">Update Thread Name</button>
 
                 <!-- Form to Get User Prompt -->
                 <form id="promptForm">
